--- a/QuizzAPP/index.html
+++ b/QuizzAPP/index.html
@@ -59,7 +59,7 @@
                     </li>
                 </ul>
             </div>
-            <button id="submit">Submit</button>
+            <button id="submit">Responder</button>
         </div>
     </body>
 </html>
